# meridian-cli

./: .env.example  .gitignore  .gitmodules  .meridian_report_tmp.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  Makefile  README.md  TANGENT_ISSUES.md  install.sh  mars.toml  meridian.toml  pyproject.toml  report.md
.agents/: .gitignore  mars.toml
.agents/agents/: __meridian-orchestrator.md  __meridian-primary.md  __meridian-subagent.md  architect.md  browser-tester.md  coder.md  design-orchestrator.md  designer.md  dev-orchestrator.md  dev-runner.md  docs-orchestrator.md  documenter.md  explorer.md  frontend-coder.md  frontend-designer.md  impl-orchestrator.md  internet-researcher.md  investigator.md  planner.md  refactor-reviewer.md  researcher.md  reviewer.md  smoke-tester.md  unit-tester.md  verification-tester.md  verifier.md
.claude/: settings.json
.claude/agents/: code-documenter.md  design-orchestrator.md  impl-orchestrator.md  investigator.md  orchestrator.md  researcher.md  tech-writer.md
.github/workflows/: meridian-ci.yml  publish-pypi.yml
.meridian/: .gitignore  agents.toml  config.toml  id
.meridian/fs/: agent-skill-design-principles.md  orphan-investigation.md  overview.md
.opencode/plugins/: meridian.ts
_docs/: cli-spec-agent.md  cli-spec-human.md
backlog/: README.md  agent-package-management-redesign.md  bugs.md  code-cleanup.md  improvements.md  known-issues.md  model-catalog-improvements.md  plan-cleanup-notes.md  primary-spawn-report-policy.md  tech-debt.md  test-cleanup.md
backlog/_reference/: migration-gotchas.md
backlog/archive/: 2026-03-03-backlog-execution.md
docs/: agent-profiles.md  chat.md  cli-reference.md  commands.md  configuration.md  developer-terminology.md  development-install.md  getting-started.md  harness-adapters.md  hooks.md  mcp-tools.md  plugin-api.md  releasing.md  safety.md  spaces.md  spawn-migration-engineering-review.md  troubleshooting.md
docs/_internal/: ARCHITECTURE.md  developer-terminology.md  development-install.md  harness-adapters.md
frontend/: .gitignore  components.json  package.json  vite.config.ts
frontend/.storybook/: main.ts  preview.tsx  vitest.setup.ts
frontend/src/: App.tsx  index.css  test-chat-main.tsx
migrations/: AGENTS.md  README.md  registry.toml
migrations/v001_uuid_state_split/: README.md  check.py  migrate.py
plans/: backlog-execution-anomalies.md  backlog-execution.md  backlog.md  bundled-skills.md  fix-start-skill-injection.md  harness-materialization.md  install-redesign.md  meridian-sync.md  model-discovery-overhaul.md  native-agent-passthrough.md  primary-cli-redesign.md  primary-spawn-report-policy.md  space-plumbing-fix.md  spawn-observability-design.md  spawn-output-overhaul.md  test-suite-and-strictness-cleanup.md  unify-harness-launch.md
plans/config-unification/: 00-overview.md
plans/remote-workspace/: requirements.md
scripts/: check-launch-invariants.sh  release-package.sh  release.sh
skills/_meridian-dev-smoke-test/: SKILL.md
src/ag_ui/: __init__.pyi  core.pyi
src/meridian/: __init__.py
tests/: AGENTS.md  SMOKE_TESTING.md  _audit.md  conftest.py  mock_harness.py  smoke_test.py  test_app_agui_phase3.py  test_app_server.py  test_cli_bootstrap.py  test_cli_config.py  test_cli_main.py  test_cli_mars.py  test_cli_report_commands.py  test_cli_run_background.py  test_cli_run_show_flags.py  test_cli_run_wait_multi.py  test_cli_skills_models.py  test_cli_slice3.py  test_cli_smoke.py  test_cli_spawn.py  test_cli_spawn_background.py  test_cli_spawn_cancel.py  test_cli_spawn_plumbing.py  test_cli_spawn_show_flags.py  test_cli_spawn_stats.py  test_cli_spawn_stream_flags.py  test_cli_spawn_wait_multi.py  test_cli_ux_fixes.py  test_config_catalog.py  test_config_discovery.py  test_config_s4b_env_overrides.py  test_config_settings.py  test_config_slice2.py  test_config_slice2_propagation.py  test_control_socket.py  test_default_agent_profiles.py  test_depth_slice4.py  test_exec_errors_slice5a.py  test_exec_slice4.py  test_exec_slice5a.py  (+38 more)
tests/cli/: test_main.py  test_sync_cmd.py
tests/config/: test_catalog.py  test_discovery.py  test_settings.py
tests/contract/: conftest.py  test_plugin_api_functions.py  test_plugin_api_types.py
tests/e2e/: README.md  adversarial.md  agent-mode.md  fork.md  output-formats.md  quick-sanity.md  state-integrity.md  work-items.md
tests/exec/: test_claude_cwd_isolation.py  test_claude_session_symlink.py  test_depth.py  test_errors.py  test_lifecycle.py  test_permissions.py  test_pipe_drain.py  test_signals.py  test_spawn_adhoc_passthrough.py  test_streaming_runner.py
tests/harness/: test_adapter_ownership.py  test_claude_adhoc_agents.py  test_claude_slug.py  test_claude_ws.py  test_codex_command_ordering.py  test_codex_ws.py  test_commands.py  test_extraction.py  test_launch_spec.py  test_launch_spec_parity.py  test_materialize.py  test_opencode_http.py  test_spec_field_guards.py  test_thinking_flags.py  test_typed_contracts.py  test_workspace_projection.py
tests/helpers/: fixtures.py
tests/integration/: conftest.py
tests/launch/: test_launch_factory.py  test_spawn_request_round_trip.py
tests/lib/: test_spawn_lifecycle.py
tests/ops/: test_agent_mode.py  test_diag.py  test_mars.py  test_models.py  test_models_config.py  test_query.py  test_reference.py  test_root_fork_cli.py  test_runtime_bootstrap.py  test_session_log.py  test_spawn_api.py  test_work.py  (+7 more)
(+2024 files in other folders)
