[project]
name = "meridian-cli"
dynamic = ["version"]
description = "Orchestrate CLI + MCP server for multi-model agent workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = [
  "ag-ui-protocol>=0.1",
  "aiohttp>=3.11",
  "coolname>=4.0.0",
  "cyclopts>=3.0",
  "fastapi>=0.115",
  "mars-agents==0.1.8",
  "mcp>=1.0",
  "psutil>=7.2.2",
  "pydantic>=2.12",
  "pydantic-settings>=2.13",
  "python-frontmatter>=1.1",
  "structlog>=25.0",
  "uvicorn[standard]>=0.34",
  "websockets>=14.0",
]

[project.urls]
Homepage = "https://github.com/meridian-flow/meridian-cli"
Repository = "https://github.com/meridian-flow/meridian-cli"
Issues = "https://github.com/meridian-flow/meridian-cli/issues"

[project.scripts]
meridian = "meridian.cli.main:main"
pytests = "meridian.dev.pytests:main"
pytest-llm = "meridian.dev.pytests:main"

[project.optional-dependencies]
dev = [
  "pyright>=1.1.400",
  "pytest>=8.4.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.12.0",
]
templates = [
  "jinja2>=3.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/meridian/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meridian"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingModuleSource = false
# CLI commands are used via decorators; pyright doesn't track decorator usage
reportUnusedFunction = "warning"
# Cross-module internal helpers are intentional
reportPrivateUsage = "warning"
# Allow casts that may become redundant after type narrowing improvements
reportUnnecessaryCast = "warning"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = [".venv", "build", "dist"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "TCH"]
ignore = [
  # PEP 695 TypeVar syntax rules are intentionally deferred until tooling support lands.
  "UP046",
  # PEP 695 TypeVar syntax rules are intentionally deferred until tooling support lands.
  "UP047",
  # Deferred while modules are still scaffold-level and heavily protocol-oriented.
  "TC001",
  # Deferred while modules are still scaffold-level and heavily protocol-oriented.
  "TC003",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["src"]
